@@ -1,6 +1,11 @@
 In development:
 # Mentioning Check 0.9.12 for now, to fix distcheck target until next release
 
+* When a test assertion fails, exit() was invoked. This results in any
+  registered exit handlers being invoked. A test should not be relied
+  upon to clean up if it fails. Instead, _exit() will be used to signal
+  a test failure, to prevent exit handlers from being invoked.
+
 * Fix issue with string formatting in ck_assert_(u)int_* calls, where using
   the % operator would be interpreted as a string formatter. Bug #96.
 
